--- a/temp-project/Gemfile
+++ b/temp-project/Gemfile
@@ -5,7 +5,7 @@ gem 'rails', '3.2.8'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3', '3.6.22'
+gem 'sqlite3', '1.3.6', :group => :developmen
 
 
 # Gems used only for assets and not required
